# Interview-Helper

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  knowledge.py
backend/app/contracts/: events.py  knowledge.py
backend/app/core/: config.py
backend/app/domain/: models.py
backend/app/interview/: __init__.py  answering.py  question_detector.py
backend/app/ws/: interview.py
backend/ingestion/: __init__.py  __main__.py  chunker.py  embeddings.py  index.py  loaders.py  models.py  retrieval.py  service.py
backend/llm/: __init__.py  base.py  factory.py  openrouter.py
backend/sources/: example-python.md
backend/stt/: __init__.py  audio.py  base.py  factory.py  stub.py  whispercpp.py
backend/tests/: test_health.py  test_interview_socket.py  test_interview_stt_websocket.py
backend/tests/ingestion/: test_chunker.py  test_embeddings.py  test_hybrid_retrieval.py  test_index.py  test_index_vectors.py  test_loaders.py  test_openrouter_embeddings.py  test_service.py
backend/tests/interview/: test_answering.py  test_question_detector.py
backend/tests/llm/: test_openrouter.py
backend/tests/stt/: test_base.py  test_whispercpp.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  audio.ts  styles.css  transcript.ts
frontend/tests/: audio.test.mjs  transcript.test.mjs
scripts/: setup-whispercpp.sh
services/whispercpp/: Dockerfile  Dockerfile.cuda  entrypoint.sh
