[tool.poetry]
name = "interview-helper-backend"
version = "0.1.0"
description = "Backend for the Interview Helper MVP"
authors = ["Interview Helper contributors"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.3"
uvicorn = { version = "^0.35.0", extras = ["standard"] }
pydantic = "^2.11.0"
pydantic-settings = "^2.14.2"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest = "^8.4.0"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
